--- a/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-main-settings/main-settings.mdx
@@ -112,13 +112,7 @@ To enable the modules for your application:
 
 ## Via API
 
-This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
-
-Before you run the Azion API, you'll need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account.
-
-With your token in hand, follow the steps to create an Azion domain via API:
-
-1. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your personal token, to retrieve your `<edge_application_id>`:
+1. Run the following `GET` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) to retrieve your `<edge_application_id>`:
 
 ```bash
 curl --location 'https://api.azionapi.net/edge_applications \
