--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/create-certificate.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/create-certificate.mdx
@@ -15,17 +15,7 @@ If your application runs on HTTPS, you'll need a **digital certificate**. A TLS 
 You can also request that a **Let's Encrypt certificate** be generated for your domain through Azion. The process for requesting a Let's Encrypt certificate is different from custom certificates. See [how to generate a Let's Encrypt certificate](/en/documentation/products/guides/how-to-generate-a-lets-encrypt-certificate/) for more information.
 :::
 
-To register your custom certificate with Azion, you'll need:
-
-- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
-- An [edge application](/en/documentation/products/guides/build/overview/).
-- A [custom domain](/en/documentation/products/guides/configure-a-domain/#link-a-custom-domain-to-your-application).
-
-You can choose to add a certificate using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
-
 ## Via RTM
-
-To add a certificate to your account:
 
 1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and then select **Digital Certificates**.
@@ -53,16 +43,10 @@ openssl s_client -showcerts -connect yourdomain.com:443
 
 ## Via API
 
-You can submit your custom certificate to Azion with a sequence of Client URL (cURL) commands you can run in your terminal, or in an API platform of your choosing.
-
-Before you run the Azion API, you need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account.
-
-To create a custom certificate via API:
-
 1. Acquire the X.509 certificate from a CA.
 2. Replace any line breaks with `\n`, including for the begin and end markers, to turn the certificate into a string.
 3. Do the same to the private key.
-4. Run the following cURL command in your terminal, replacing `[TOKEN VALUE]` with your personal token and adding your certificate and private key to the fields:
+4. Run the following cURL command in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and adding your certificate and private key to the fields:
 
 ```bash
 curl --location 'https://api.azionapi.net/digital_certificates' \
@@ -86,7 +70,7 @@ If you want to create a trusted CA certificate:
 
 1. Acquire a trusted certificate signed by your CA.
 2. Replace any line breaks with `\n`, including for the begin and end markers, to turn the certificate into a string.
-3. Run the following cURL command in your terminal, replacing `[TOKEN VALUE]` with your personal token and adding your certificate and to the fields:
+3. Run the following cURL command in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and adding your certificate and to the fields:
 
 ```bash
 curl --location 'https://api.azionapi.net/digital_certificates' \
