--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/migrate-ns.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/migrate-ns.mdx
@@ -17,13 +17,6 @@ If **Intelligent DNS** is activated, hosted zones and queries could generate usa
 
 ## Create a DNS zone
 
-Before you transfer your DNS resolution Azion, you must have:
-
-- A domain registered with a hosting service.
-- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
-
-You can choose to migrate your name resolution to Azion using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
-
 ### Via RTM
 
 To create a DNS zone for a domain entry `www.yourdomain.org` in RTM:
@@ -49,11 +42,7 @@ You'll be redirected to your list of zones. To get the Azion nameservers:
 
 ### Via API
 
-Before you run the API, you'll need a personal token. See the [Azion API documentation](/en/documentation/products/guides/personal-tokens/) for more information.
-
-To create a DNS zone:
-
-1. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and adding your domain address in the `domain` field:
+1. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and adding your domain address in the `domain` field:
 
 ```bash
 curl --location 'https://api.azionapi.net/intelligent_dns' \
@@ -121,13 +110,6 @@ Once your nameserver records have been updated to Azion's addresses, you'll be a
 
 After you've successfully migrated your DNS zone to Azion, you won't need to access your domain provider to create new records, since you can do that directly with Azion. This means you can launch your application with it's custom domain and easily create new applications and records as needed. To associate a new edge application to your domain, you'll need to create a new CNAME record in your zone and associate it to an edge application.
 
-Before you transfer your DNS resolution to Azion, you'll need:
-
-- A domain registered with a hosting service whose [DNS resolution has been transferred to Azion](#redirect-authoritative-nameservers).
-- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).    
-- An [edge application](/en/documentation/products/guides/build/overview/).
-- An [Azion domain](/en/documentation/products/guides/configure-a-domain/).
-
 ### Via RTM
 
 To customize the domain of your edge application under your new zone, you need to associate the CNAME of your edge application to a new record. Retrieve the custom domains listed for the application by following the steps:
@@ -142,7 +124,7 @@ Now you'll need to navigate to the **Intelligent DNS** area to add a record for 
 1. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and then select **Intelligent DNS**.
 2. Select the DNS zone.
 3. Navigate to the **Records** tab.
-4. Under **Name**, create a hostname or subdomain. For example: `*`
+4. Under **Name**, create a hostname or subdomain. For example: `*`.
 5. Under **Type**, select `CNAME - Canonical name`.
 6. Under **Value**, enter the Azion domain address in FQDN format. Example: `xxxxxxxxxx.map.azionedge.net`
 7. Set the **TTL** and **Policy** as desired.
@@ -152,11 +134,7 @@ Repeat the process described above for every CNAME listed for your application. 
 
 ### Via API
 
-Before you run the API, you'll need a personal token. See the [Azion API documentation](/en/documentation/products/guides/personal-tokens/) for more information.
-
-To customize the domains of your zone for your edge application:
-
-1. Run the following `GET` request to retrieve your domain's id:
+1. Run the following `GET` request to retrieve your domain's ID, replacing `TOKEN VALUE` with your [personal token](/en/documentation/products/guides/personal-tokens/):
 
 ```bash
 curl --location 'https://api.azionapi.net/domains' \
@@ -223,7 +201,7 @@ Add a wildcard (`*`) subdomain instead of a specific subdomain to cover all poss
 }
 ```
 
-6. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your personal token, `hosted_zone_id` with the value from the previous response and the answers list with the Azion domain address as a string:
+6. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), `hosted_zone_id` with the value from the previous response and the answers list with the Azion domain address as a string:
 
 ```bash
 curl --location 'https://api.azionapi.net/intelligent_dns/<hosted_zone_id>/records' \
