--- a/src/content/docs/en/pages/0. main-menu/work-with-domains/point-domain.mdx
+++ b/src/content/docs/en/pages/0. main-menu/work-with-domains/point-domain.mdx
@@ -13,16 +13,7 @@ To point your traffic to Azion, you must associate your **Azion domain** to your
 This process will require you to associate a CNAME record to your domain. See [Migrate your DNS to Azion](/en/documentation/products/guides/migrate-ns-to-azion/) for more information on how to associate an ANAME type record.
 :::
 
-Before you point your domain to Azion, you must have:
-
-- A domain registered with a hosting service.
-- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
-- An [edge application](/en/documentation/products/guides/build/overview/).
-- A [custom domain](/en/documentation/products/guides/configure-a-domain/#link-a-custom-domain-to-your-application).
-
 ## Verify custom domain
-
-Before you point your domain to Azion, you need to associate your custom domain to your Azion domain to verify ownership. You can choose to verify your domain using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
 
 ### Via RTM
 
@@ -39,11 +30,7 @@ Now your Azion domain is ready to be associated to a custom domain on your DNS p
 
 ### Via API
 
-Before you run the API, you'll need a personal token. See the [Azion API documentation](/en/documentation/products/guides/personal-tokens/) for more information.
-
-To edit a domain with the CNAMEs you want to associate to the edge application:
-
-1. Run the following `GET` request to retrieve your domain's id:
+1. Run the following `GET` request to retrieve your domain's ID, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/):
 
 ```bash
 curl --location 'https://api.azionapi.net/domains?order_by=name&sort=asc&page=1&page_size=10' \
@@ -72,7 +59,7 @@ curl --location 'https://api.azionapi.net/domains?order_by=name&sort=asc&page=1&
 ```
 
 3. Locate the domain you wish to link to the custom domain and copy the `domain_id` value received in the response.
-4. Run a `PATCH` request, adding the `domain_id` as a path, to update the `cnames` field with the domains you wish to configure:
+4. Run a `PATCH` request, , replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and adding the `domain_id` as a path, to update the `cnames` field with the domains you wish to configure:
 
 ```bash
 curl --location --request PATCH 'https://api.azionapi.net/domains/<domain_id>' \
