--- a/src/content/docs/en/pages/1.build/edit-cache-settings/cache-settings.mdx
+++ b/src/content/docs/en/pages/1.build/edit-cache-settings/cache-settings.mdx
@@ -17,19 +17,7 @@ Adjust your edge application's cache strategy, including expiration values at th
 Some cache features require the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) module to be active. If **Application Acceleration** is activated, data transfer could generate usage-related costs. Check the [pricing page](https://www.azion.com/en/pricing/) for more information.
 :::
 
-To modify your application's cache settings, you need:
-
-- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
-- An [edge application](/en/documentation/products/guides/build/overview/).
-- An [Azion or custom domain](/en/documentation/products/guides/configure-a-domain/).
-
-You can configure your application's cache settings using [Real-Time Manager (RTM)](#via-rtm) or the [Azion API](#via-api).
-
 ## Via RTM
-
-In this section, you'll add a new configuration for your application's cache. You can choose to modify your **Default Cache Setting**, which is already listed and activated by default in your application, or create a new one.
-
-To create a new cache setting instance:
 
 1. [Access RTM](https://manager.azion.com).
 2. On the upper-left corner of the page, open the **Products menu**, represented by three horizontal lines, and select **Edge Application**.
@@ -43,20 +31,14 @@ This guide will go over each option available to you, but you can choose which c
 
 ### Expiration settings
 
-To start, you can customize how long objects should remain in cache. You can customize the cache Time To Live (TTL) in browsers and at the edge. This data is sent in requests and responses through the `Cache-Control` and `Expires` HTTP headers. 
+You can customize the cache Time To Live (TTL) in browsers and at the edge. This data is sent in requests and responses through the `Cache-Control` and `Expires` HTTP headers.
 
 :::note
 The TTL determined by the `max-age` directive in `Cache-Control`. If `Cache-Control` isn't present in the request or response, the timestamp sent in the `Expires` header determines the cache TTL. 
 :::
 
-You can choose to keep **Honor Origin Cache Headers** selected to respect the TTL values sent in the headers by the origin or the application itself. To override the values sent in these HTTP headers to the user:
-
 1. In **Browser Cache Settings**, select **Override Cache Settings** to determine a custom TTL value.
-2. Add the TTL in seconds in the **Maximum TTL (seconds)** field.
-
-:::note
-The maximum TTL value for browsers should be between `0` and `31536000` seconds (3 years). 
-:::
+2. Add the TTL in seconds in the **Maximum TTL (seconds)** field. For example: `432000` = 5 days.
 
 In **CDN Cache Settings**, you can determine whether the edge should abide by the values sent in the `Cache-Control` and `Expires` headers.
 
@@ -65,17 +47,17 @@ You can choose to keep **Honor Origin Cache Headers** selected to respect the TT
 If your application isn't sending `Cache-Control` and `Expires` headers or the values aren't set correctly, you can determine a default maximum TTL for the cache to be maintained at the edge in the **Default TTL (seconds)** field. If your application is sending these values, to override them you can:
 
 3. In **CDN Cache Settings**, select **Override Cache Settings** to determine a custom TTL value.
-4. Add the TTL in seconds in the **Maximum TTL (seconds)** field.
+4. Add the TTL in seconds in the **Maximum TTL (seconds)** field. For example: `864000` = 10 days.
 
 :::note
-The maximum and default TTL values for the edge should be between `60` and `31536000` seconds (3 years). If you have the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) module activated, you can set this value to a minimum of `0`. Additionally, if you have the [L2 Caching](/en/documentation/products/edge-application/l2-caching/) module activated and wish to maintain cache in the L2, you must set TTL to at least `3` seconds.
+The maximum and default TTL values for the edge should be between `60` and `31536000` seconds (1 year). If you have the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) module activated, you can set this value to a minimum of `0`. Additionally, if you have the [L2 Caching](/en/documentation/products/edge-application/l2-caching/) module activated and wish to maintain cache in the L2, you must set TTL to at least `3` seconds.
 
 A TTL zero isn't the same as a cache bypass. For more details, read about the difference between these settings on the [Bypass cache](/en/documentation/products/edge-application/rules-engine/#difference-between-bypass-cache-and-ttl-0) documentation.
 :::
 
 ### Slice files
 
-Next, you can implement file slicing for large files. Instead of downloading a large content file and risking timeouts or connection terminations, the file is sliced in pieces and cache the content on-demand to implement file slicing for large files:
+Instead of downloading a large content file and risking timeouts or connection terminations, files can be sliced in pieces and cached on-demand. To implement file slicing for large files:
 
 5. In **Slice Settings**, enable the switch for **Slice Configuration**.
 6. The **Edge caching** layer is already selected by default. If you have the **L2 Caching** module activated, you can also enable slicing for the L2.
@@ -95,7 +77,7 @@ To determine content variation in cache:
 7. In **Cache by Query String**, select **Content varies by some Query String fields (Whitelist)**.
 8. In **Query String fields**, add the value `city`.
 
-Now, when a request is made to an application URL `xxxxxxxxxx.map.azionedge.net/page?city=12345`, the cache key for this URL will be different from cache keys made to `xxxxxxxxxx.map.azionedge.net/page` and any other queries appended to the URL.
+When a request is made to an application URL `xxxxxxxxxx.map.azionedge.net/page?city=12345`, the cache key for this URL will be different from cache keys made to `xxxxxxxxxx.map.azionedge.net/page` and any other queries appended to the URL.
 
 :::tip
 Use the **Content varies by Query String, except for some fields (Blacklist)** option to do the reverse: keep all requests with query strings as different cache keys; the ones specified in **Query String fields** will be grouped into a single cache key.
@@ -115,7 +97,7 @@ Next, you can determine content variation based on cookies:
 12. In **Cache by Cookies**, Select **Content varies by some Cookies (Whitelist)**.
 13. In **Cookie names**, add the value `cookie_name`.
 
-Now, when a request is made to an application and the response from the origin sends a `Set-Cookie` header, the objects in the `Cookie` request header that contain the name `cookie_name`, regardless of value, will be considered as a different object in cache from other requests.
+When a request is made to an application and the response from the origin sends a `Set-Cookie` header, the objects in the `Cookie` request header that contain the name `cookie_name`, regardless of value, will be considered as a different object in cache from other requests.
 
 :::tip
 Use the **Content varies by Cookies, with the exception of a few (Blacklist)** option to do the reverse: keep all requests with cookies as different cache key; the ones specified in the **Cookie name** will be grouped into a single cache key.
@@ -123,7 +105,7 @@ Use the **Content varies by Cookies, with the exception of a few (Blacklist)** o
 
 ### Adaptive delivery
 
-Finally, if you've created a [device group](/en/documentation/products/guides/build/create-device-groups/), you can segment cache keys based on the device groups you created. To do so:
+If you've [created a device group](/en/documentation/products/guides/build/create-device-groups/), you can segment cache keys based on the device groups you created. To do so:
 
 14. Select **Content varies by some Device Groups (Whitelist)**.
 15. Click the **+** button to add a device group.
@@ -157,13 +139,7 @@ To verify how your content is being cached, follow the guide [How to verify appl
 
 ## Via API
 
-This section contains a sequence of Client URL (cURL) commands you can run in a command terminal or in an API platform of your choosing. 
-
-Before you run the Azion API, you'll need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account. You also need to [retrieve your edge application ID](/en/documentation/products/guides/build/configure-main-settings/) to run the following requests.
-
-With your token and edge application ID in hand, follow the steps to create a new cache setting via API:
-
-1. Run the following `PATCH` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and the `<edge_application_id>` variable with the `id` of your edge application to activate the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) module:
+1. Run the following `PATCH` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and the `<edge_application_id>` variable with [your edge application ID](/en/documentation/products/guides/build/configure-main-settings/) to activate the [Application Acceleration](/en/documentation/products/edge-application/application-acceleration/) module:
 
 ```bash
 curl --location --request PATCH 'https://api.azionapi.net/edge_applications/<edge_application_id>' \
@@ -185,9 +161,7 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 ```
 
 4. Copy the ID received in the response.
-
-
-5. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your personal token, the `<edge_application_id>` variable with the `id` of your edge application, and the `<device_group_id>` with the ID of the device group, if desired:
+5. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), the `<edge_application_id>` variable with [your edge application ID](/en/documentation/products/guides/build/configure-main-settings/), and the `<device_group_id>` with the ID of the device group from the previous response, if needed:
 
 ```bash
 curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id>/cache_settings' \
@@ -282,7 +256,7 @@ curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id
 
 To activate the cache setting for your application:
 
-7. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your personal token, the `<edge_application_id>` variable with the `id` of your edge application, and the `<cache_setting_id>` variable with the cache setting ID received in the response:
+7. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), the `<edge_application_id>` variable with [your edge application ID](/en/documentation/products/guides/build/configure-main-settings/), and the `<cache_setting_id>` variable with the cache setting ID received in the response:
 
 ```bash
 curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id>/rules_engine/request/rules' \
