--- a/src/content/docs/en/pages/1.build/edit-device-groups/device-groups.mdx
+++ b/src/content/docs/en/pages/1.build/edit-device-groups/device-groups.mdx
@@ -13,14 +13,6 @@ You can use **Device Groups** to group end-users based on their devices, operati
 
 <Button href="/en/documentation/products/edge-application/device-groups/" text="Go to Device Groups documentation" variant="secondary"></Button>
 
-To create a device group for your edge application, you must have:
-
-- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
-- An [edge application](/en/documentation/products/guides/build/overview/).
-- An [Azion or custom domain](/en/documentation/products/guides/configure-a-domain/).
-
-You can create device groups using [Real-Time Manager](#via-rtm) or the [Azion API](#via-api).
-
 ## Via RTM
 
 The purpose of this guide is that you create and match a new device group for mobile devices that access your application. To add a new device group through RTM:
@@ -57,19 +49,11 @@ If your current browser sends a `User-Agent` header similar to the example, you 
 curl -I https://xxxxxxxxxx.map.azionedge.net/ -H "User-Agent: iPhone Android"
 ```
 
-You should receive a list of headers including the custom header added by the rule: `device-is: Mobile device`.
-
-Now that you've verified that the devices are being correctly categorized, you can customize the desired behavior using the same rule.
+You should receive a list of headers including the custom header added by the rule: `device-is: Mobile device`. Now that you've verified that the devices are being correctly categorized, you can customize the desired behavior using the same rule.
 
 ## Via API
 
-This section contains a sequence of cURL commands you can run in a command terminal or in an API platform of your choosing.
-
-Before you run the Azion API, you'll need to [generate a personal token](/en/documentation/products/guides/personal-tokens/) for your account. You also need to [retrieve your edge application ID](/en/documentation/products/guides/build/configure-main-settings/) to run the following requests.
-
-With your token and edge application ID in hand, follow the steps to create a new origin via API:
-
-1. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your personal token and the `<edge_application_id>` variable with the `id` of your edge application:
+1. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/) and the `<edge_application_id>` variable with [your edge application ID](/en/documentation/products/guides/build/configure-main-settings/):
 
 ```bash
 curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id>/device_groups' \
@@ -105,7 +89,7 @@ The procedure described below is a temporary solution to check the validity of y
 
 Now, to create a response that will be triggered by the device group using **Rules Engine**:
 
-1. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your personal token, the `<edge_application_id>` variable with the `id` of your edge application, and the `input_value` variable with the name of your device group:
+1. Run the following `POST` request in your terminal, replacing `[TOKEN VALUE]` with your [personal token](/en/documentation/products/guides/personal-tokens/), the `<edge_application_id>` variable with [your edge application ID](/en/documentation/products/guides/build/configure-main-settings/), and the `input_value` variable with the name of your device group:
 
 ```bash
 curl --location 'https://api.azionapi.net/edge_applications/<edge_application_id>/rules_engine/response/rules' \
